feat: RA-78 rem fromEntity